--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,14 @@
               <a class="nav-link" href="#">Technology</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Pricing</a>
+              <a class="nav-link" href="#">Pricing</a>
             </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-primary">Post Product</button>
+          </li>
           </ul>
         </div>
       </nav>
+      
 </body>
 </html>
