--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,17 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<div>
+    <h1>JustWorks Marketplace Login</h1>
+    <form action="/login.html" method="post">
+        <label>username</label>
+        <input type="text" name="username" id="username" required>
+        <label>password</label>
+        <input type="password" name="password" id="password" required>
+        <input type="submit" value="Login">
 
-hello world
+    </form>
+</div>>
     
 </body>
 </html>
