Allow users to add product information into the backend(json) from the frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">Pricing</a>
             </li>
           <li class="nav-item">
-            <button type="button" class="btn btn-primary">Post Product</button>
+            <a href="http://127.0.0.1:5000/post"><button type="button" class="btn btn-primary">Post Product</button></a>
           </li>
           </ul>
         </div>
