--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <div>
-    <h1>JustWorks Marketplace Login</h1>
+    <h1>JustWorks Marketplace</h1>
+    <h2>Login</h2>
     <form action="/login.html" method="post">
         <label>username</label><br>
         <input type="text" name="username" id="username" required><br>
