--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,8 @@
 <div>
     <h1>JustWorks Marketplace</h1>
     <h2>Login</h2>
-    <form action="/login.html" method="post">
+    <p id="message"></p>
+    <form action="." method="post">
         <label>username</label><br>
         <input type="text" name="username" id="username" required><br>
         <br>
@@ -22,4 +23,15 @@
 </div>
     
 </body>
+  <!--
+    if username does not exist in py dictionary, do not submit
+        
+        -->
+<script>
+  
+
+
+</script>
+
+
 </html>
