--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
 <div>
     <h1>JustWorks Marketplace</h1>
     <h2>Profile</h2>
-    <label>username:</label><br><br>
+    <h3> Hello, {{_username}}!</h3>
     <label>Products</label><br>
 
     </form>
