--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
     <h3 id="greeting"></h3><br>
     <label>Your Products</label>
 
-    <button onclick="upload()">Upload New Product</button>
+    <button onclick="location.href = 'post_page.html'">Upload New Product</button>
 
     <p id="message">You currently have no products.</p>
 
@@ -25,10 +25,6 @@
 <script>
    var name=localStorage.getItem("user");
    document.getElementById('greeting').innerHTML= "Welcome back, " + name + "!";
-   
-   var upload= function(user){
-        return document.location.href="post_page.html"
-    }
 </script>
 
 </html>
