--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 
     <button onclick="location.href = 'post_page.html'">Upload New Product</button>
 
-    <p id="message">You currently have no products.</p>
+    <p id="message">I have 3 products.</p>
 
 
     </form>
