--- a/templates/companyBio.html
+++ b/templates/companyBio.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1>JustWorks Marketplace</h1>
+    <h2 id="name">{{name}}</h2>
+    <p>Profile</p>
+    <img id="image">
+
+
+
+    
+
     
 </body>
 </html>
