--- a/templates/productbio.html
+++ b/templates/productbio.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-  <div class="jumbotron jumbotron-fluid">
+  
+  <script src="script.js"></script>
+
+ <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Brief Client Bio</h1>
     <p class="lead">
@@ -33,6 +36,61 @@ Information about the client and services.</p>
   Founded in 2022
   </div>
 </div>
+  
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Jane Doe</h5> 
+    
+    <br>
+    <br>
+  
+    <h6 class="card-subtitle mb-2 text-muted">Marketing Specialist</h6>
+    <p class="card-text">About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe </p>
+    <a href="#" class="card-link">Linkedin</a>
+    <a href="#" class="card-link">Facebook</a>
+
+  
+
+    
+  </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Jane Doe</h5> 
+    
+    <br>
+    <br>
+  
+    <h6 class="card-subtitle mb-2 text-muted">Marketing Specialist</h6>
+    <p class="card-text">About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe </p>
+    <a href="#" class="card-link">Linkedin</a>
+    <a href="#" class="card-link">Facebook</a>
+
+  
+
+    
+  </div>
+</div>
+
+  <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Jane Doe</h5> 
+    
+    <br>
+    <br>
+  
+    <h6 class="card-subtitle mb-2 text-muted">Marketing Specialist</h6>
+    <p class="card-text">About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe About Jane Doe </p>
+    <a href="#" class="card-link">Linkedin</a>
+    <a href="#" class="card-link">Facebook</a>
+
+  
+
+    
+  </div>
+</div>
 
 </body>
+
 </html>
