added footer html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,13 @@
     <title>JustWorks Marketplace</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/78995b9c51.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Hello World!!</h1>
 
+    <!-- Nav Bar Code -->
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Justworks Market</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,6 +37,25 @@
           </ul>
         </div>
       </nav>
-      
+    
+    <!-- Footer Code -->
+
+    <footer>
+        <div class="footer-content">
+            <h3>JustWorks Market</h3>
+            <p>meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow meow</p>
+            <ul class="socials">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright &copy;2022 JustWorks. designed by <span>The Sprinterns</span></p>
+        </div>
+    </footer>
+    
+    
 </body>
 </html>
