--- a/templates/companyBio.html
+++ b/templates/companyBio.html
@@ -11,20 +11,18 @@
     <h2 id="name">{{name}}</h2>
     <p>Profile</p>
     <img id="image" style="max-height:300px;"><br><br>
-    <input id="upload_img" type="file">
+    <input id="upload_img" onchange="loadFile()" accept="image/jpeg, image/png" type="file" >
 
-
-
-    
 
     
 </body>
 
 <script>
-
-
     if(document.getElementById("image").src == ""){
         document.getElementById("image").src ="../img/default-avatar.jpg";
+    }
+    var loadFile = function(){
+        document.getElementById("image").src =document.getElementById("upload_img").value;
     }
   
 </script>
