--- a/templates/companyBio.html
+++ b/templates/companyBio.html
@@ -13,7 +13,15 @@
     <img id="image">
 
 
-
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Bio</li>
+        <li class="list-group-item">Phone: 322-789-0093</li>
+        <li class="list-group-item">Email: test@gmail.com </li>
+        <li class="list-group-item">Linkedin: </li>
+      </ul>
+      
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <button class="btn btn-primary" type="button">Edit Information</button>
     
 
     
