--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JustWorks Marketplace</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 <div>
