Adding react implementation

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,15 @@
 
     
 </div>
-    
+
+<div id="like_button_container"></div>
+
+
+<import-react></import-react>
+
+<!-- Load our React component. -->
+<script src="like_button.js"></script>
+
 </body>
  
 <script>
