Hafeefa's navbar and header

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,29 @@
-html, body {
+html{
     height: 100%;
     width: 100%; 
-    background-color: white;
+}
+body{
+    background-color: #710313;
 }
 
 h1 { 
     font-weight: bold;
-    font-family:'Lucida Sans';
+    font-family:"Lucida Sans";
 }
 
 .btn {
 background-color: #df5931;
+}
+..container-logo{
+    justify-content: right;
+    padding: 20px;
+}
+#navbarNav{
+    justify-content:space-between;
+}
+.collapse navbar-collapse{
+    justify-content: space-between;
+}
+body{
+    background-color: springgreen;
 }
