--- a/templates/style.css
+++ b/templates/style.css
@@ -26,15 +26,15 @@ h1{
 #back{
     background-color: white;
 }
+body{
+    font-family: emoji;
+}
+.
 /*.navbar navbar-expand-lg navbar-light bg-light{*/
 /*    border-bottom-style: solid;*/
 /* note:^^ how do i put this here in the css file instead of html?
-/* also, how do i change the background color to white?
  */
 /*
 .collapse navbar-collapse{
     justify-content: space-between;
-}
-body{
-    background-color: white;
 }
