converting html to React

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ h1 {
 .btn {
 background-color: #df5931;
 }
-..container-logo{
+.container-logo{
     justify-content: right;
     padding: 20px;
 }
