Hafeefa's navbar and header

--- a/templates/firstCard.html
+++ b/templates/firstCard.html
@@ -55,41 +55,44 @@
         <div class="col text-center"> <!-- this put button in center-->
 
  <!--     <div class="col text-center"> <! --this put button in center-->
-    <h1>Write the product / subscription name here</h1>
-      <p> <br></p>
-
-         <div class="card" style="width: 40rem;">
+    <h1 id = "h1">Write the product / subscription name here</h1>
+            <div class="container">
+                <div class="row">
+                      <div class="col-sm">
+                <div class="card" style="width: 45rem;">
 
  <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top"
         alt="Hollywood Sign on The Hill" />  <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-  </div>
+    <!--<a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
+                </div>
+            </div>
+                </div>
 
-      <div class="col text-center"> <!-- this put button in center-->
 
-                            <p> <br> </p>
-      <p> Write discrption of product. for example:</p>
+      <div class="col text-center" id="tables"> <!-- this put button in center-->
 
-     <!-- <li>
-              <ul id="center">Imported
-              <ul id ="center">Length: 10.25in / 26cm</ul>
-              <ul id ="center">Height: 6.25in / 16cm</ul>
-      </li> -->
-                  <ul class="list-group">
+                           <!-- <p> <br> </p> do padding-->
+      <p id="prodName"> (product name) </p>
+
+<div class="col-sm">
+          <ul class="list-group" id="cards">
   <li class="list-group-item">Previously owned </li>
   <li class="list-group-item">Length: 10.25in / 26cm </li>
   <li class="list-group-item">Height: 6.25in / 16cm</li>
   <li class="list-group-item">Slip pocket, Patch interior pockets</li>
   <li class="list-group-item">Fold-over flap with turn lock closure</li>
 </ul>
-                  <p><br></p>
- check out more products below
+
+      </div>
+      </div>
+            </div>
+                 <!-- <p><br></p>  do padding instead-->
+            <p id="checkMore"> Recommended</p>
                   <!-- end of card -->
-<p><br></p>
+<!--<p><br></p> use padding -->
 
                                 <p> <br></p>
 
