Organized product display in the /browse page

--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -118,3 +118,78 @@ footer{
 }
 
 /* footer css end */
+
+.card-img-top {
+    width: 100%;
+    height: 25vw;
+    object-fit: scale-down;
+    max-width: 200px;
+
+}
+
+.card{
+    height: 50vw !important;
+    overflow: scroll;
+    /*max-width: 300px;*/
+    max-height: 600px;
+
+}
+
+.card-title{
+    font-size: 1.5vw !important;
+}
+
+.designed_btn {
+    background: #11557C !important;
+    color: white !important;
+}
+
+
+
+/* CSS */
+.button-6 {
+  align-items: center;
+  background-color: #00446b;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: rgba(255, 255, 255, 0.85);
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1.5vw;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.button-6:hover,
+.button-6:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+.button-6:hover {
+  transform: translateY(-1px);
+}
+
+.button-6:active {
+  background-color: #F0F0F1;
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  color: rgba(0, 0, 0, 0.65);
+  transform: translateY(0);
+}
