--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -50,28 +50,30 @@
 /* ----------------------------------------------------------- */
 
 /* footer css start */
+html, body {
+  height: 100%;
+  width: 100%;
+}
 
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
     background: #fcfcfc;
-} */
-
+}
 footer{
-    /* position: absolute; */
+    /*position: absolute;*/
     bottom: 0;
     left: 0;
     right: 0;
     background: #4287f5;
     height: auto;
-    width: 100vw;
-    font-family: "Open Sans";
-    padding-top: 40px;
-    color: #000000;
+    font-family: "Ariel";
+    padding-top: 30px;
 }
+
 .footer-content{
     display: flex;
     align-items: center;
@@ -79,18 +81,60 @@ footer{
     flex-direction: column;
     text-align: center;
 }
-.footer-content h3{
+.footer-content h4{
     font-size: 1.8rem;
     font-weight: 400;
     text-transform: capitalize;
     line-height: 3rem;
 }
-.footer-content p{
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
+
+/* sub code start */
+
+/* Style the form element with a border around it */
+form {
+ /* border: 20px solid #0a3c8c;*/
+  width: 500px;
+  align-items: center;
+  justify-content: center;
+  padding-left: 120px;
+  padding-right: 120px;
 }
+
+
+/* Add some padding and a grey background color to containers */
+.container{
+  padding: 30px;
+  background-color: #f1f1f1;
+}
+
+/* Style the input elements and the submit button */
+input[type=text], input[type=submit] {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Add margins to the checkbox */
+input[type=checkbox] {
+  margin-top: 16px;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  background-color: #5edef7;
+  color: white;
+  border: none;
+}
+
+input[type=submit]:hover {
+  opacity: 0.8;
+}
+
+/* sub code end */
+
 .socials{
     list-style: none;
     display: flex;
@@ -101,35 +145,83 @@ footer{
 .socials li{
     margin: 0 10px;
 }
+/*socials are white*/
 .socials a{
     text-decoration: none;
     color: #fff;
 }
 .socials a i{
-    font-size: 1.1rem;
+    font-size: 30px;
     transition: color .4s ease;
-
 }
 .socials a:hover i{
     color: #5edef7;
 }
 
 .footer-bottom{
-    background: #000;
-    color: #fff;
+    background: #0a3c8c;
     width: 100vw;
     padding: 20px 0;
     text-align: center;
+
 }
 .footer-bottom p{
     font-size: 14px;
     word-spacing: 2px;
     text-transform: capitalize;
+    color: #ffffff;
 }
 .footer-bottom span{
     text-transform: uppercase;
     opacity: .4;
-    font-weight: 200;
+    font-weight: normal;
+    color: #ffffff;
+}
+
+/*Footer content stuff */
+/*flex!*/
+footer .content .link-boxes{
+  width: 95%;
+  display: flex;
+  justify-content: space-around;
+}
+/*css for category thing*/
+.content .link-boxes .box .link_name{
+  color: #fff;
+  font-size: 22px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding-left: 35px;
+  position: relative;
+}
+/*the line under each thing*/
+.link-boxes .box .link_name::before{
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  height: 2px;
+  width: 50px;
+  background: #fff;
+}
+/*removes stupid bullets*/
+.content .link-boxes .box li{
+  margin: 6px 0;
+  list-style: none;
+}
+/*css for links*/
+.content .link-boxes .box li a{
+  color: #fff;
+  padding-left: 50px;
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+  opacity: 0.8;
+  transition: all 0.4s ease
+}
+/*Links underline when u hover*/
+.content .link-boxes .box li a:hover{
+  opacity: 1;
+  text-decoration: underline;
 }
 
 /* footer css end */
