--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -303,3 +303,11 @@ footer .content .link-boxes{
   color: rgba(0, 0, 0, 0.65);
   transform: translateY(0);
 }
+
+/* ----------------------------------------------------------- */
+
+.profile.center {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: flex !important;
+}
