--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -390,11 +390,23 @@ footer .content .link-boxes{
   
 }
 
+.profile.contain {
+  padding-left: 50px;
+  padding-right: 50px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px #D1D8DE;
+  
+}
+
 .profile.products {
   background-color: #F0F8FF !important;
   border: None !important;
   
 }
 
+.profile.background {
+  background: #F0F8FF;
+}
 
 /* ----------------------------------------------------------- */
