FOOTER DONE BOISSS

--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -106,7 +106,7 @@ form {
   border-radius: 0 0 10px 10px;
 }
 /* Add some padding and a grey background color to containers */
-.container{
+.subButton-container{
   padding: 15px;
   background-color: #ffffff;
 }
