--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -328,7 +328,32 @@ footer .content .link-boxes{
 
 /* -------------------------- Hafeefa --------------------------------- */
 
-
+#getstartedbutton {
+    background: orange;
+    border-radius: 8%;
+    padding: 15px;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 700;
+    padding-right: 18px;
+    padding-left: 19px;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+#thebuttonspaddings{
+    padding-top:5px;
+}
+#theloginbutton{
+    border: solid;
+    border-radius: 8%;
+    padding:18px;
+    padding-left:30px;
+    padding-right:30px;
+    border-block-color:black;
+    background:white;
+    color:black;
+    font-weight: 600;
+    text-decoration:none;
+}
 .card-img-top{
     width: 100% !important;
     height: 100% !important;
