Navbar complete, just need to put something for services button

--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -329,11 +329,11 @@ footer .content .link-boxes{
 /* -------------------------- Hafeefa --------------------------------- */
 
 #getstartedbutton {
-    background: orange;
+    background: rgb(255,99,71);
     border-radius: 8%;
     padding: 15px;
     font-family: "Source Sans Pro", sans-serif;
-    font-weight: 700;
+    font-weight: 800;
     padding-right: 18px;
     padding-left: 19px;
     color: white;
