--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -228,17 +228,15 @@ footer .content .link-boxes{
 
 .card-img-top {
     width: 100%;
-    height: 25vw;
+    height: 10vw;
     object-fit: scale-down;
     max-width: 200px;
-
 }
 
 .card{
-    height: 38vw !important;
+    max-height: 30vw !important;
     overflow: scroll;
-    /*max-width: 300px;*/
-    max-height: 600px;
+    /*max-height: 600px;*/
 
 }
 
