--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -301,7 +301,7 @@ footer .content .link-boxes{
 
 .button-6 {
   align-items: center;
-  background-color: #3480e8;
+  background-color: #1e98ff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: .25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
@@ -548,7 +548,19 @@ font-family:'Oswald'
   object-position: center right;
 }
 
+/* ----- Dashboard Socials ----- */
+.container-tips {
+    text-align: center;
+    margin-top: 30px;
+}
 
+#boldDash {
+    font-weight: bold;
+}
+
+#itemDash {
+    font-weight: 240;
+}
 
 /* -----------------------Breakpoints------------------------------------ */
 
