--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -11,9 +11,7 @@
     font-family: "Source Sans Pro", serif ;
     color: #0b2d3b;
     font-size: 1.8vw;
-    
 }
-
 .new_btn {
     background: #3295e5 !important;
 }
@@ -326,6 +324,21 @@ footer .content .link-boxes{
   vertical-align: baseline;
   width: auto;
 }
+.button6fontfam{
+  font-family: "Source Sans Pro", sans-serif;
+  min-height: 3rem;
+  font-size: 1.5vw;
+  font-weight: 600;
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+
+}
 
 .button-6:hover,
 .button-6:focus {
@@ -348,6 +361,22 @@ footer .content .link-boxes{
 }
 
 /* -------------------------- Hafeefa --------------------------------- */
+#logoutbutton{
+    border: solid;
+    border-radius: 8%;
+    padding:19px;
+    padding-left:30px;
+    padding-right:30px;
+    border-block-color:black;
+    background:white;
+    color:black;
+    font-weight: 600;
+    text-decoration:none;
+}
+#logoutbutton:hover{
+    background: powderblue;
+
+}
 .nav-item{
     border-radius: 20px;
 }
@@ -447,6 +476,59 @@ footer .content .link-boxes{
 #braceletimg{
     padding-top:20px;
 }
+/*---------------------------- Dark Mode -----------------------------*/
+/*label {*/
+/*  width:500px;*/
+/*  height:200px;*/
+/*  position: relative;*/
+/*  display: block;*/
+/*  background: #ebebeb;*/
+/*  border-radius: 200px;*/
+/*  box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.4);*/
+/*  cursor: pointer;*/
+/*}*/
+/*label:after {*/
+/*  content: "";*/
+/*  width:180px;*/
+/*  height: 180px;*/
+/*  position: absolute;*/
+/*  top:10px;*/
+/*  left:10px;*/
+/*  background: linear-gradient(180deg,#ffcc89,#d8860b);*/
+/*  border-radius: 180px;*/
+/*  box-shadow: 0px 5px 10px rgba(0,0,0,0.2);*/
+/*}*/
+/*input {*/
+/*  width: 0;*/
+/*  height: 0;*/
+/*  visibility: hidden;*/
+/*}*/
+/*input:checked + label {*/
+/*  background: #242424;*/
+/*}*/
+/*input:checked + label:after {*/
+/*  left:490px;*/
+/*  transform: translateX(-100%);*/
+/*  background: linear-gradient(180deg,#777,#3a3a3a);*/
+/*}*/
+/*label, label:after {*/
+/*  transition: 0.3s*/
+/*}*/
+/*label:active:after{*/
+/*  width: 260px;*/
+/*}*/
+/*.background {*/
+/*  width:100vw;*/
+/*  height: 100vh;*/
+/*  background: #fff;*/
+/*  z-index: -1;*/
+/*  position: absolute;*/
+/*  transition: 0.3s;*/
+/*}*/
+/*input:checked + label + .background {*/
+/*  background:#242424;*/
+/*    color:white;*/
+/*}*/
 
 /* ---------------------------- Naomi ------------------------------- */
 
