profile page image upload

--- a/react frontend/src/css/styles.css
+++ b/react frontend/src/css/styles.css
@@ -535,7 +535,7 @@ footer .content .link-boxes{
   padding-right: 50px;
   background-color: white;
   border-radius: 15px;
-  box-shadow: 5px 5px 5px #D1D8DE;
+  box-shadow: 5px 5px 5px #0000006e;
   
 }
 
